test/bad/arrays/comprehension03.px

a = [for x in 1...5 yield x.toString()]
a[0] == 2
